# pgnpg

./: .editorconfig  .env.example  .gitignore  .mise.toml  Cargo.toml  biome.json
api/: Cargo.toml
api/src/: lib.rs  usecase.rs
client/: astro.config.mjs  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
client/public/api/: me.json
client/public/profile/name/: data.json
client/src/: types.d.ts  typing.ts
client/src/layouts/: Main.astro
client/src/pages/: index.astro
client/src/pages/profile/: index.astro
client/src/pages/profile/name/: index.astro
entity/: Cargo.toml
entity/examples/: parse_json.rs
entity/src/: degree.rs  error.rs  grade.rs  level.rs  lib.rs  mstdn_token.rs  pgn_level.rs  pix.rs  record.rs  refresh_log.rs  refreshed_users.rs  sex.rs  student.rs  user.rs  user_profile.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240410_000001_create_table.rs
server/: Cargo.toml
server/src/: lib.rs  usecase.rs
src/: main.rs
