workspace = { members = ["entity", "migration", ".", "api"] }

[package]
name = "pgnpg"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "./api" }
entity = { path = "./entity" }
migration = { path = "./migration" }

sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
time = "=0.3.34"
tokio = { version = "1.37.0", features = ["full"] }
serde = "1.0.197"

envy = "0.4.2"
thiserror = "1.0.58"
