workspace = { members = ["entity", "migration", ".", "server"] }

[package]
name = "pgnpg"
version = "0.1.0"
edition = "2021"

[dependencies]
server = { path = "./server" }
entity = { path = "./entity" }
migration = { path = "./migration" }

sea-orm = { version = "0.12.15", features = [
	"sqlx-sqlite",
	"runtime-tokio-rustls",
	"macros",
	"sea-orm-internal",
] }
time = "0.3.36"
tokio = { version = "1.37.0", features = ["full"] }
serde = "1.0.197"

envy = "0.4.2"
thiserror = "1.0.58"
