[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
thiserror = "1.0.58"
sea-orm =  "0.12.15"
serde = { version = "1.0", features = ["derive"] ***REMOVED***
serde_json = "1.0.115"
reqwest = "0.12.3"
chrono = "0.4.37"
serde_with = "3.7.0"
num-derive = "0.4.2"
num-traits = "0.2.18"
saturating_cast = "0.1.0"
