[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }

chrono = "0.4.37"
anyhow = "1.0.82"
sea-orm = "0.12.15"
axum = "0.7.5"
tokio = "1"
serde_json = "1.0.115"
reqwest = "0.12.3"
itertools = "0.12.1"
serde = "1.0.197"
tower-http = { version = "0.5.2", features = ["fs", "compression-full"] }
ulid = "1.1.2"
